test/mutation_analysis/s0228_summary_ranges/hafis/starchat/mutants/5/result.txt
./test/mutation_analysis/s0228_summary_ranges/hafis/starchat/mutants/5/Solution.java:31: error: unreachable statement
        for (int i = 1; false; i++) {
                                    ^
1 error
